<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeviceConnectApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_token">Get AccessToken</string>
    <string name="action_permission">Permissions</string>

    <string name="devices_section_name">Devices</string>
    <string name="profiles_section_name">Profiles</string>
    <string name="permission_section_name">Permission</string>

    <string name="loading_label">Loading&#8230;</string>

    <string name="button_label">Button</string>
    <string name="auth_button_label">Get AccessToken</string>
    <string name="device_button_label">Device Discovery</string>
    <string name="profile_button_label">Profile Discovery</string>
    <string name="vibration_button_label">Vibration</string>

    <string name="address_label">IP Address: </string>
    <string name="port_label">Port: </string>

    <string name="localhost">localhost</string>

    <string name="address_define_failure">Input IP Address.</string>
    <string name="port_define_failure">Input Port number.</string>
    <string name="device_id_define_failure">Invalid device ID.</string>

    <string name="star_vibration">Start Vibration</string>

    <string name="method_tag">method</string>
    <string name="interface_tag">interface</string>
    <string name="option_tag">option</string>
    <string name="path_tag">path</string>
    <string name="select_file_tag">file_select</string>

    <string name="ok_button_label">OK</string>
    <string name="cancel_button_label">Cancel</string>

    <string name="enter_text">Enter new permission name.</string>
    <string name="del_conf">Delete %1$s.\nAre you sure?</string>

    <string name="server_settings">[Device Connect Server Setting]</string>
    <string name="xml_locate_setting">[Profile XML Location]</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>

    <string name="no_files">No Files.</string>

    <string name="add_label">+</string>
    <string name="share_label">Share</string>

    <string name="xml_source">XML Source:</string>
    <string name="xml_asset">asset</string>
    <string name="xml_url">Web</string>
    <string name="xml_site">URL:</string>
</resources>
